more fixes from olga

--- a/code/index.html
+++ b/code/index.html
@@ -134,7 +134,7 @@
                     <div class="shelf2dropDown shelfsdropDown hidden">
                         <!-- <div class="sub-titles">מנגנון פעולה</div> -->
                         <div><span class="bold"> </span><br>
-                            <p class="introdText"> טרם העלייה לתע"מ וכחודש לכל הפחות. נדרש להציג את אבחון היחידה- לוודא
+                            <p class="introdText"> טרם העלייה לתע"מ וכחודש לכל הפחות, נדרש להציג את אבחון היחידה- לוודא
                                 את כשירות המסגרת ומוכונותה למשימה:</p>
                             <span class="bold"> </span>
                         </div>
@@ -153,7 +153,7 @@
                                 <p style="margin: 0;">סטטוס תיאום משיכה</p>
                             </div>
                             <div class="shelfMedPicContainer">
-                                4. אמבולנס
+                                4. אמבולנס:
                                 <h4 style="margin: 0;">במסגרת סדירה</h4>
                                 <p style="margin: 0;">אמבולנס אורגני - כשירות ותקינות.</p>
                                 <h4 style="margin: 0;">במסגרת מילואים</h4>
@@ -369,17 +369,17 @@
                         </div>
                         <div class="shelfPicSection">
                             <div class="shelfMedPicContainer buttonText protectiveGlasses ">
-                                משקפי מגן.
+                                משקפי מגן
                             </div>
                             <div class="shelfMedPicContainer buttonText ceramicShielding ">
-                                מיגון קרמי/שכפ"צ.
+                                מיגון קרמי/שכפ"צ
                             </div>
                             <div class="shelfMedPicContainer buttonText personalHelmet ">
-                                קסדה אישית וקסדת הפס"ד.
+                                קסדה אישית וקסדת הפס"ד
                             </div>
 
                             <p style="text-align: center; font-weight: 700;"> הדגשת השוני בהנחיות הגזרתיות והחשיבות
-                                .בחבירה לכוחות הגזרתיים לדיוק המיגון</p>
+                                בחבירה לכוחות הגזרתיים לדיוק המיגון.</p>
                         </div>
                     </div>
                     <!-- מדף 2 -->
@@ -720,18 +720,18 @@
             <template class="textAndImgGlasses">
                 <div class="title"></div>
                 <ul class="big-list">
-                    <li>מגינים על העיניים מפגיעת רסיסים, ומקטינים משמעותית פגיעה
+                    <li>מגנים על העיניים מפגיעת רסיסים, ומקטינים משמעותית פגיעה
                         חודרת בעיניים.</li>
                         <br>
                         <br>
-                    <li> אי שימוש נובע קודם כל מחוסרמודעות. </li>
+                    <li> אי שימוש נובע קודם כל מחוסר מודעות. </li>
                         <br>
                         <br>
 
-                    <li> ניתן להתגבר על אדים באמצעות מטלית ייעודית המגיעה עם המשקפיים.אם המשקפיים שרוטים או שבורים –נדרש להחליף אותם. </li>
+                    <li> ניתן להתגבר על אדים באמצעות מטלית ייעודית המגיעה עם המשקפיים. אם המשקפיים שרוטים או שבורים –נדרש להחליף אותם. </li>
                         <br>
                         <br>
-                    <li> מרכיבי משקפי ראיה זכאים עדשות מיוחדות המורכבות בתוך משקפי המגן.[פוסטר פגיעת עיניים]</li>
+                    <li> מרכיבי משקפי ראיה זכאים עדשות מיוחדות המורכבות בתוך משקפי המגן.</li>
                 </ul>
                 <br>
                 <br>
