--- a/code/index.html
+++ b/code/index.html
@@ -57,17 +57,17 @@
             <!-- about -->
             <div class="aboutPage hidden">
                 <div class="aboutHeadline">אודות</div>
-                <div class="sub-titles"> רמ"ד טי"ל</div>
+                <div class="sub-titles"> רמ"ד טי"ל:</div>
                 <div> רס"מ שלומי אוגרן</div>
-                <div class="sub-titles">רת"ח מו"פ וחדשנות בלמידה</div>
+                <div class="sub-titles">רת"ח מו"פ וחדשנות בלמידה:</div>
                 <div>רס"ל אביב אואנונו</div>
-                <div class="sub-titles">פיתוח</div>
+                <div class="sub-titles">פיתוח:</div>
                 <div>רב"ט ניצן סלומון, טור' אדוה אבא</div>
-                <div class="sub-titles">עיצוב</div>
+                <div class="sub-titles">עיצוב:</div>
                 <div>טור' לוטם גרוס</div>
-                <div class="sub-titles">מומחי תוכן</div>
+                <div class="sub-titles">מומחי תוכן:</div>
                 <div>רס"ב אולגה ריידר</div>
-                <div class="sub-titles">גרסה</div>
+                <div class="sub-titles">גרסה:</div>
                 <div>מרץ 2024</div>
                 <div class="logos">
                     <img src="../assets/images/grapics/about/mador-till.svg" />
@@ -337,7 +337,7 @@
                     <!-- מדף 3 -->
                     <div class="shelfs shelf3">
                         <div class="shelfHedline">
-                            שמירת כשירות המטופלים במהלך התעסוקה
+                            שמירת כשירות המטפלים במהלך התעסוקה
                             <img class="downButton blue" src="../assets/images/grapics/med-shelfs/down-button.svg">
                         </div>
                         <img class="shelf blue" src="../assets/images/grapics/med-shelfs/shelf.svg">
