--- a/code/index.html
+++ b/code/index.html
@@ -94,10 +94,11 @@
                         <div class="medHeadline">סיכום</div><img class="mainPagePic picLeft"
                             src="../assets/images/grapics/home-page/mdi--book-outline.svg">
                     </div>
-                    <h1>קישורים נוספים:</h1>
+                    <h1 style="text-align: center;">קישורים נוספים:</h1>
                     <div class = "href-div">
                         <a href="https://campus.digital.idf.il/course/view.php?id=2370">ענף רפואה.</a>
                         <a href="https://madortil.github.io/medicbook/#/">מדיקבוק.</a>
+                        <p style="font-size: 1.3rem; font-weight: 500;">רפמצ - לסדיר ולמילואים:</p>
                         <a href="https://campus.digital.idf.il/course/view.php?id=1450">סביבת הלמידה למטפלים בכירים בסדיר בקמפוס הדיגיטלי.</a>
                         <a href="https://campus.digital.idf.il/course/view.php?id=1835">סביבת הלמידה למטפלים בכירים במילואים בקמפוס הדיגיטלי.</a>
                         <a href="https://t.me/rafmatz101">ערוץ הטלגרם.</a>
